--- a/template.yaml
+++ b/template.yaml
@@ -121,6 +121,38 @@ Resources:
   # Simple syntax to create a DynamoDB table with a single attribute primary key, more in
   # https://github.com/awslabs/serverless-application-model/blob/master/versions/2016-10-31.md#awsserverlesssimpletable
 
+  # This is a Lambda function config associated with the source code: delete-item.mjs
+  deleteItemFunction:
+    Type: AWS::Serverless::Function
+    Properties:
+      CodeUri: backend/
+      Handler: src/handlers/delete-item.deleteByIdHandler
+      Runtime: nodejs18.x
+      Architectures:
+      - x86_64
+      MemorySize: 128
+      Timeout: 100
+      Description: A simple example includes a HTTP DELETE method to DELETE one item by
+        id from a DynamoDB table.
+      Policies:
+        # Give Create/Read/Update/Delete Permissions to the MusicQueTable
+      - DynamoDBCrudPolicy:
+          TableName: !Ref MusicQueTable
+      Environment:
+        Variables:
+          # Make table name accessible as environment variable from function code during execution
+          MUSICQUE_TABLE: !Ref MusicQueTable
+          # Make DynamoDB endpoint accessible as environment variable from function code during execution
+          ENDPOINT_OVERRIDE: ''
+      Events:
+        Api:
+          Type: Api
+          Properties:
+            Path: /{id}
+            Method: DELETE
+            RestApiId:
+              Ref: ApiGatewayApi
+  #
   # DynamoDB table to store item: {id: &lt;ID&gt;, name: &lt;NAME&gt;}
   MusicQueTable:
     Type: AWS::Serverless::SimpleTable
