--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "sam-starter-fontend",
+  "name": "musicque-bot",
   "version": "1.0.0",
-  "description": "Frontend app for the Innovator Island workshop.",
-  "author": "Randeep Singh <randeepx@amazon.com>, Ben Peterson <benpte@amazon.com>",
+  "description": "",
   "private": true,
   "scripts": {
     "serve": "vue-cli-service serve",
@@ -10,16 +9,18 @@
     "lint": "vue-cli-service lint",
     "test": "vitest"
   },
-  "dependencies": {    
+  "dependencies": {
+    "@videojs-player/vue": "^1.0.0",
     "axios": "^0.22.0",
     "core-js": "^3.18.1",
+    "video.js": "^8.3.0",
     "vue": "^3.0.0"
   },
   "devDependencies": {
     "@testing-library/vue": "^7.0.0",
+    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/cli-plugin-babel": "^5.0.8",
     "@vue/cli-plugin-eslint": "^5.0.8",
-    "@vitejs/plugin-vue": "^4.2.3",
     "@vue/cli-service": "^5.0.8",
     "@vue/compiler-sfc": "^3.0.0",
     "babel-eslint": "^10.1.0",
