--- a/template.yaml
+++ b/template.yaml
@@ -2,7 +2,7 @@ AWSTemplateFormatVersion: 2010-09-09
 Description: >-
   wemusic-sam
 Transform:
-- AWS::Serverless-2016-10-31
+  - AWS::Serverless-2016-10-31
 
 # Resources declares the AWS resources that you want to include in the stack
 # https://docs.aws.amazon.com/AWSCloudFormation/latest/UserGuide/resources-section-structure.html
@@ -28,21 +28,22 @@ Resources:
       Handler: src/handlers/get-all-items.getAllItemsHandler
       Runtime: nodejs18.x
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP get method to get all items by
+      Description:
+        A simple example includes a HTTP get method to get all items by
         id from a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the MusicQueTable
-      - DynamoDBCrudPolicy:
-          TableName: !Ref MusicQueTable
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MusicQueTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
           MUSICQUE_TABLE: !Ref MusicQueTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
-          ENDPOINT_OVERRIDE: ''
+          ENDPOINT_OVERRIDE: ""
       Events:
         Api:
           Type: Api
@@ -62,21 +63,22 @@ Resources:
       Handler: src/handlers/get-by-id.getByIdHandler
       Runtime: nodejs18.x
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP get method to get one item by
+      Description:
+        A simple example includes a HTTP get method to get one item by
         id from a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the MusicQueTable
-      - DynamoDBCrudPolicy:
-          TableName: !Ref MusicQueTable
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MusicQueTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
           MUSICQUE_TABLE: !Ref MusicQueTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
-          ENDPOINT_OVERRIDE: ''
+          ENDPOINT_OVERRIDE: ""
       Events:
         Api:
           Type: Api
@@ -96,20 +98,21 @@ Resources:
       Handler: src/handlers/put-item.putItemHandler
       Runtime: nodejs18.x
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP post method to add one item to
+      Description:
+        A simple example includes a HTTP post method to add one item to
         a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the MusicQueTable
-      - DynamoDBCrudPolicy:
-          TableName: !Ref MusicQueTable
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MusicQueTable
       Environment:
         Variables:
           MUSICQUE_TABLE: !Ref MusicQueTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
-          ENDPOINT_OVERRIDE: ''
+          ENDPOINT_OVERRIDE: ""
       Events:
         Api:
           Type: Api
@@ -129,21 +132,22 @@ Resources:
       Handler: src/handlers/delete-item.deleteByIdHandler
       Runtime: nodejs18.x
       Architectures:
-      - x86_64
+        - x86_64
       MemorySize: 128
       Timeout: 100
-      Description: A simple example includes a HTTP DELETE method to DELETE one item by
+      Description:
+        A simple example includes a HTTP DELETE method to DELETE one item by
         id from a DynamoDB table.
       Policies:
         # Give Create/Read/Update/Delete Permissions to the MusicQueTable
-      - DynamoDBCrudPolicy:
-          TableName: !Ref MusicQueTable
+        - DynamoDBCrudPolicy:
+            TableName: !Ref MusicQueTable
       Environment:
         Variables:
           # Make table name accessible as environment variable from function code during execution
           MUSICQUE_TABLE: !Ref MusicQueTable
           # Make DynamoDB endpoint accessible as environment variable from function code during execution
-          ENDPOINT_OVERRIDE: ''
+          ENDPOINT_OVERRIDE: ""
       Events:
         Api:
           Type: Api
@@ -158,7 +162,7 @@ Resources:
     Type: AWS::Serverless::SimpleTable
     Properties:
       PrimaryKey:
-        Name: id 
+        Name: id
         Type: String
       ProvisionedThroughput:
         ReadCapacityUnits: 2
@@ -172,45 +176,53 @@ Resources:
     Properties:
       Bucket: !Ref WebSiteBucket
       PolicyDocument:
-        Version: '2012-10-17'
+        Version: "2012-10-17"
         Id: PolicyForCloudFrontPrivateContent
         Statement:
-        - Sid: AllowCloudFrontServicePrincipal
-          Effect: Allow
-          Principal:
-            Service: cloudfront.amazonaws.com
-          Action: s3:GetObject
-          Resource: !Join ['', ['arn:aws:s3:::', !Ref WebSiteBucket, /*]]
-          Condition:
-            StringEquals:
-              AWS:SourceArn: !Join ['', ['arn:aws:cloudfront::', !Ref "AWS::AccountId",
-                  :distribution/, !Ref CloudFrontDistribution]]
+          - Sid: AllowCloudFrontServicePrincipal
+            Effect: Allow
+            Principal:
+              Service: cloudfront.amazonaws.com
+            Action: s3:GetObject
+            Resource: !Join ["", ["arn:aws:s3:::", !Ref WebSiteBucket, /*]]
+            Condition:
+              StringEquals:
+                "AWS:SourceArn":
+                  !Join [
+                    "",
+                    [
+                      "arn:aws:cloudfront::",
+                      !Ref "AWS::AccountId",
+                      ":distribution/",
+                      !Ref CloudFrontDistribution,
+                    ],
+                  ]
   # CloudFront Distribution for hosting the single page app website
   CloudFrontDistribution:
     Type: AWS::CloudFront::Distribution
     Properties:
       DistributionConfig:
         Origins:
-        - DomainName: !GetAtt WebSiteBucket.RegionalDomainName
-          Id: myS3Origin
-          OriginAccessControlId: !GetAtt CloudFrontOriginAccessControl.Id
-          S3OriginConfig:
-            OriginAccessIdentity: ''
+          - DomainName: !GetAtt WebSiteBucket.RegionalDomainName
+            Id: myS3Origin
+            OriginAccessControlId: !GetAtt CloudFrontOriginAccessControl.Id
+            S3OriginConfig:
+              OriginAccessIdentity: ""
         Enabled: true
         DefaultRootObject: index.html
         HttpVersion: http2
         DefaultCacheBehavior:
           AllowedMethods:
-          - DELETE
-          - GET
-          - HEAD
-          - OPTIONS
-          - PATCH
-          - POST
-          - PUT
+            - DELETE
+            - GET
+            - HEAD
+            - OPTIONS
+            - PATCH
+            - POST
+            - PUT
           CachedMethods:
-          - GET
-          - HEAD
+            - GET
+            - HEAD
           TargetOriginId: myS3Origin
           ForwardedValues:
             QueryString: false
@@ -225,10 +237,10 @@ Resources:
           GeoRestriction:
             RestrictionType: whitelist
             Locations:
-            - US
-            - CA
-            - GB
-            - DE
+              - US
+              - CA
+              - GB
+              - DE
         ViewerCertificate:
           CloudFrontDefaultCertificate: true
   CloudFrontOriginAccessControl:
@@ -251,7 +263,7 @@ Resources:
     Properties:
       ResourceGroupName:
         Ref: ApplicationResourceGroup
-      AutoConfigurationEnabled: 'true'
+      AutoConfigurationEnabled: "true"
 Outputs:
   APIGatewayEndpoint:
     Description: API Gateway endpoint URL for Prod stage
